terraform_code/V1-EC2.tf
# provider "aws" {
#   region = "eu-west-1"

# }

# resource "aws_instance" "d-server" {
#     ami = "ami-0a89fa9a6d8c7ad98"
#     instance_type = "t2.micro"
#     key_name = "vivy"

# }
